--- a/index.html
+++ b/index.html
@@ -5,11 +5,126 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer type="module"></script>
-    <title>PRENOM - Harry Potter</title>
+    <title>Yoan - Harry Potter</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
+    <header>
+      <img id="logoHP" src="./images/logo/logo.png" alt="Logo_HP" />
+      <h1>Wiki Harry Potter</h1>
+      <ul>
+        <li>Students</li>
+        <li>Staff</li>
+        <li>House</li>
+        <li>Spells</li>
+      </ul>
+    </header>
+    <main>
+      <h2>Welcome !</h2>
+      <h2>Wiki Harry Potter</h2>
+
+      <h3>House</h3>
+      <hr />
+
+      <div id="logoDiv">
+        <img
+          class="logoHouse"
+          src="./images/logo/Gryffindor.png"
+          alt="Logo_Griffondor"
+        />
+        <img
+          class="logoHouse"
+          src="./images/logo/Hufflepuff.png"
+          alt="Logo_Poufsouffle"
+        />
+        <img
+          class="logoHouse"
+          src="./images/logo/Ravenclaw.png"
+          alt="Logo_Serredaigle"
+        />
+        <img
+          class="logoHouse"
+          src="./images/logo/Slytherin.png"
+          alt="Logo_Serpentard"
+        />
+      </div>
+
+      <h3>CHARACTERS</h3>
+      <hr />
+      <div id="Frame1">
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/harry.webp"
+            alt="HarryPicture"
+          />
+          <p>Harry <br />Potter</p>
+        </div>
+
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/hermione.webp"
+            alt="HermionePicture"
+          />
+          <p>Hermione <br />Granger</p>
+        </div>
+
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/ron.webp"
+            alt="RonPicture"
+          />
+          <p>Ron <br />Weasley</p>
+        </div>
+
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/draco.webp"
+            alt="DragoPicture"
+          />
+          <p>Drago <br />Malfoy</p>
+        </div>
+      </div>
+      <div id="Frame2">
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/cho.webp"
+            alt="ChoPicture"
+          />
+          <p>Cho <br />Chang</p>
+        </div>
+
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/snape.webp"
+            alt="SeverusPicture"
+          />
+          <p>Severus <br />Sanpe</p>
+        </div>
+
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/mcgonagall.webp"
+            alt="MinervaPicture"
+          />
+          <p>Minerva <br />McGonagall</p>
+        </div>
+
+        <div>
+          <img
+            class="charactersPicture"
+            src="./images/characters/cedric.webp"
+            alt="CedricPicture"
+          />
+          <p>Cedric <br />Diggory</p>
+        </div>
+      </div>
+    </main>
     <footer></footer>
   </body>
 </html>
