--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
   <body>
     <header>
       <img id="logoHP" src="./images/logo/logo.png" alt="Logo_HP" />
-      <h1>Wiki Harry Potter</h1>
-      <ul>
-        <li>Students</li>
-        <li>Staff</li>
-        <li>House</li>
-        <li>Spells</li>
-      </ul>
+      <div>
+        <h1>Wiki Harry Potter</h1>
+        <ul>
+          <li>Students</li>
+          <li>Staff</li>
+          <li>House</li>
+          <li>Spells</li>
+        </ul>
+      </div>
     </header>
     <main>
       <h2>Welcome !</h2>
