--- a/index.html
+++ b/index.html
@@ -29,21 +29,25 @@
 
       <div id="logoDiv">
         <img
+          id="GryffondorLogo"
           class="logoHouse"
           src="./images/logo/Gryffindor.png"
           alt="Logo_Griffondor"
         />
         <img
+        id="PoufsouffleLogo"
           class="logoHouse"
           src="./images/logo/Hufflepuff.png"
           alt="Logo_Poufsouffle"
         />
         <img
+        id="SerredaigleLogo"
           class="logoHouse"
           src="./images/logo/Ravenclaw.png"
           alt="Logo_Serredaigle"
         />
         <img
+        id="SerpentardLogo"
           class="logoHouse"
           src="./images/logo/Slytherin.png"
           alt="Logo_Serpentard"
@@ -52,9 +56,7 @@
 
       <h3>CHARACTERS</h3>
       <hr />
-      <div id="Frame1">
-        
-      </div>
+      <div id="Frame1"></div>
     </main>
     <footer></footer>
   </body>
