--- a/details.html
+++ b/details.html
@@ -12,12 +12,14 @@
       <img id="logoHP" src="./images/logo/logo.png" alt="Logo_HP" />
       <div>
         <h1>Wiki Harry Potter</h1>
-        <ul>
-          <li>Students</li>
-          <li>Staff</li>
-          <li>House</li>
-          <li>Spells</li>
-        </ul>
+        <nav>
+          <ul>
+            <li>Students</li>
+            <li>Staff</li>
+            <li>House</li>
+            <li>Spells</li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
