--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
       <img id="logoHP" src="./images/logo/logo.png" alt="Logo_HP" />
       <div>
         <h1>Wiki Harry Potter</h1>
-        <ul>
-          <li>Students</li>
-          <li>Staff</li>
-          <li>House</li>
-          <li>Spells</li>
-        </ul>
+        <nav>
+          <ul>
+            <li>Students</li>
+            <li>Staff</li>
+            <li>House</li>
+            <li>Spells</li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
@@ -35,19 +37,19 @@
           alt="Logo_Griffondor"
         />
         <img
-        id="PoufsouffleLogo"
+          id="PoufsouffleLogo"
           class="logoHouse"
           src="./images/logo/Hufflepuff.png"
           alt="Logo_Poufsouffle"
         />
         <img
-        id="SerredaigleLogo"
+          id="SerredaigleLogo"
           class="logoHouse"
           src="./images/logo/Ravenclaw.png"
           alt="Logo_Serredaigle"
         />
         <img
-        id="SerpentardLogo"
+          id="SerpentardLogo"
           class="logoHouse"
           src="./images/logo/Slytherin.png"
           alt="Logo_Serpentard"
